--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-dns-prefetch-control " content="on">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 
