--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <!-- 博客 -->
                     <a class="icon" data-title="Blog" href="https://blog.kzero.vip/" target="_blank">
                         <i>
-                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-icon="typewriter"
-                                data-prefix="fad" width="20px" height="20px" viewBox="0 0 512 512">
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px"
+                                viewBox="0 0 512 512">
                                 <path fill="currentColor"
                                     d="M368 96a16 16 0 01-16-16V0H88a24 24 0 00-24 24v168h83a32 32 0 0122 9l14 14a32 32 0 0022 9h102a32 32 0 0022-9l14-14a32 32 0 0122-9h83V96z"
                                     opacity=".4" />
@@ -47,20 +47,30 @@
                     <!-- GitHub -->
                     <a class="icon" data-title="GitHub" href="https://github.com/zoiiiiii" target="_blank">
                         <i>
-                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-icon="github"
-                                data-prefix="fab" width="20px" height="20px" viewBox="0 0 496 512">
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px"
+                                viewBox="0 0 496 512">
                                 <path fill="currentColor"
                                     d="M166 397c0 2-2 4-5 4-4 0-6-1-6-4 0-2 2-3 5-3 3-1 6 1 6 3zm-31-4c-1 2 1 4 4 5s6 0 6-2-1-5-4-5c-3-1-5 0-6 2zm44-2c-3 1-5 3-5 5 1 2 3 3 6 3 3-1 5-3 5-5s-3-3-6-3zM245 8A240 240 0 000 252a251 251 0 00170 239c12 2 17-5 17-12v-61s-70 15-85-30c0 0-12-29-28-37 0 0-23-15 2-15 0 0 24 2 38 26 22 38 59 27 73 21 2-16 9-28 16-34-56-6-112-14-112-111 0-27 7-41 23-59a95 95 0 013-67c21-7 69 27 69 27a235 235 0 01126 0s48-34 69-27a94 94 0 012 67c16 18 26 32 26 59 0 97-59 105-115 111 9 8 17 23 17 46v84c0 6 5 14 17 12a248 248 0 00168-239C496 113 384 8 245 8zM97 353c-1 1-1 3 1 5 1 2 4 2 5 1s1-3-1-5c-1-2-4-2-5-1zm-11-8l3 4c1 1 3 0 4-1s0-3-2-4-4 0-5 1zm33 35c-2 2-1 5 1 7s5 2 7 1c1-2 0-5-2-7s-5-2-6-1zm-12-14v6c2 2 5 3 6 2 2-1 2-4 0-6-1-3-4-4-6-2z" />
                             </svg>
                         </i>
                     </a>
                     <!-- 导航 -->
-                    <a class="icon" data-title="导航" href="https://nav.kzero.vip/" target="_blank">
+                    <!-- <a class="icon" data-title="导航" href="https://nav.kzero.vip/" target="_blank">
                         <i>
-                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-icon="icon-bars"
-                                data-prefix="fad" width="20px" height="20px" viewBox="0 0 24 28">
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px"
+                                viewBox="0 0 24 28">
                                 <path fill="currentColor"
                                     d="M24 21v2c0 0.547-0.453 1-1 1h-22c-0.547 0-1-0.453-1-1v-2c0-0.547 0.453-1 1-1h22c0.547 0 1 0.453 1 1zM24 13v2c0 0.547-0.453 1-1 1h-22c-0.547 0-1-0.453-1-1v-2c0-0.547 0.453-1 1-1h22c0.547 0 1 0.453 1 1zM24 5v2c0 0.547-0.453 1-1 1h-22c-0.547 0-1-0.453-1-1v-2c0-0.547 0.453-1 1-1h22c0.547 0 1 0.453 1 1z">
+                                </path>
+                            </svg>
+                        </i>
+                    </a> -->
+                    <a class="icon" data-title="邮箱" href="https://mailto:i@kzero.vip" target="_blank">
+                        <i>
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px"
+                                viewBox="0 0 640 640">
+                                <path fill="currentColor"
+                                    d="M576 64c35.346 0 64 28.654 64 64v0 384c0 35.346-28.654 64-64 64v0h-512c-35.346 0-64-28.654-64-64v0-384c0-35.2 28.8-64 64-64h512zM436.16 355.2l203.84 156.8v-64l-163.84-124.8 163.84-131.2v-64l-320 256-320-256v64l163.84 131.2-163.84 124.8v64l203.84-156.8 116.16 92.8 116.16-92.8z">
                                 </path>
                             </svg>
                         </i>
@@ -68,8 +78,8 @@
                     <!-- 简历 -->
                     <a class="icon" data-title="简历" href="https://resume.kzero.vip/" target="_blank">
                         <i>
-                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-icon="profile"
-                                data-prefix="fad" width="20px" height="20px" viewBox="0 0 32 32">
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px"
+                                viewBox="0 0 32 32">
                                 <path fill="currentColor"
                                     d="M27 0h-24c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h24c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM26 28h-22v-24h22v24zM8 18h14v2h-14zM8 22h14v2h-14zM10 9c0-1.657 1.343-3 3-3s3 1.343 3 3c0 1.657-1.343 3-3 3s-3-1.343-3-3zM15 12h-4c-1.65 0-3 0.9-3 2v2h10v-2c0-1.1-1.35-2-3-2z">
                                 </path>
