--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </svg>
                         </i>
                     </a> -->
-                    <a class="icon" data-title="邮箱" href="https://mailto:i@kzero.vip" target="_blank">
+                    <a class="icon" data-title="邮箱" href="mailto:i@kzero.vip" target="_blank">
                         <i>
                             <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px"
                                 viewBox="0 0 640 640">
