--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <div class="card-left">
                 <div class="author">
-                    <img class="avatar" src="./assets//img/avatar.jpg">
+                    <img class="avatar" src="./assets/img/avatar.jpg">
                     <h1>CodeKZero</h1>
                     <p class="subhead">Geek</p>
                 </div>
