--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/index.min.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </div>
             <div class="card-right">
                 <p>
-                    0000 00～
+                    0000 00
                     <br>
                     011 0 0100 1010 111 11 0 100001 1 000
                     <br>
@@ -92,10 +92,10 @@
         <!-- 引用搜狐接口实现用户的IP与设备的显示 -->
         <footer class="footer ">
             <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
-            <script src="./assets/js/sohuapi.js"></script>
+            <script src="./assets/js/sohuapi.min.js"></script>
         </footer>
     </div>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/index.min.js"></script>
 </body>
 
 </html>
