--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>HI，KZero</title><meta http-equiv="x-dns-prefetch-control " content="on"><meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1"><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"><link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"><link rel="stylesheet" href="./css/index.css"></head><body><div class="card"><main><div class="left"><div class="author"><img class="avatar" src="./img/avatar.jpg"><h1>CodeKZero</h1><p class="subhead">Geek</p></div></div><div class="right"><p>0000 00<br>011 0 0100 1010 111 11 0 100001 1 000<br>11 1011 100001 000 00 1 0</p><div class="link"><a class="icon" data-title="Blog" href="https://blog.kzero.vip/" target="_blank"><i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 512 512"><path fill="currentColor" d="M368 96a16 16 0 01-16-16V0H88a24 24 0 00-24 24v168h83a32 32 0 0122 9l14 14a32 32 0 0022 9h102a32 32 0 0022-9l14-14a32 32 0 0122-9h83V96z" opacity=".4" /><path fill="currentColor" d="M368 96h80v-5a18 18 0 00-5-12L369 5a18 18 0 00-12-5h-5v80a16 16 0 0016 16zm112 96H365a32 32 0 00-22 9l-14 14a32 32 0 01-22 9H205a32 32 0 01-22-9l-14-14a32 32 0 00-22-9H32a32 32 0 00-32 32v32a32 32 0 0032 32v160a64 64 0 0064 64h320a64 64 0 0064-64V288a32 32 0 0032-32v-32a32 32 0 00-32-32zM336 296a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-40 24H88a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm32 64h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm232 56a8 8 0 01-8 8H152a8 8 0 01-8-8v-16a8 8 0 018-8h208a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8z" /></svg></i></a><a class="icon" data-title="GitHub" href="https://github.com/zoiiiiii" target="_blank"><i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 496 512"><path fill="currentColor" d="M166 397c0 2-2 4-5 4-4 0-6-1-6-4 0-2 2-3 5-3 3-1 6 1 6 3zm-31-4c-1 2 1 4 4 5s6 0 6-2-1-5-4-5c-3-1-5 0-6 2zm44-2c-3 1-5 3-5 5 1 2 3 3 6 3 3-1 5-3 5-5s-3-3-6-3zM245 8A240 240 0 000 252a251 251 0 00170 239c12 2 17-5 17-12v-61s-70 15-85-30c0 0-12-29-28-37 0 0-23-15 2-15 0 0 24 2 38 26 22 38 59 27 73 21 2-16 9-28 16-34-56-6-112-14-112-111 0-27 7-41 23-59a95 95 0 013-67c21-7 69 27 69 27a235 235 0 01126 0s48-34 69-27a94 94 0 012 67c16 18 26 32 26 59 0 97-59 105-115 111 9 8 17 23 17 46v84c0 6 5 14 17 12a248 248 0 00168-239C496 113 384 8 245 8zM97 353c-1 1-1 3 1 5 1 2 4 2 5 1s1-3-1-5c-1-2-4-2-5-1zm-11-8l3 4c1 1 3 0 4-1s0-3-2-4-4 0-5 1zm33 35c-2 2-1 5 1 7s5 2 7 1c1-2 0-5-2-7s-5-2-6-1zm-12-14v6c2 2 5 3 6 2 2-1 2-4 0-6-1-3-4-4-6-2z" /></svg></i></a><a class="icon" data-title="Email" href="mailto:i@kzero.vip" target="_blank"><i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px" height="20px" viewBox="0 0 640 640"><path fill="currentColor" d="M576 64c35.346 0 64 28.654 64 64v0 384c0 35.346-28.654 64-64 64v0h-512c-35.346 0-64-28.654-64-64v0-384c0-35.2 28.8-64 64-64h512zM436.16 355.2l203.84 156.8v-64l-163.84-124.8 163.84-131.2v-64l-320 256-320-256v64l163.84 131.2-163.84 124.8v64l203.84-156.8 116.16 92.8 116.16-92.8z"></path></svg></i></a><a class="icon" data-title="Resume" href="https://resume.kzero.vip/" target="_blank"><i><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="20px"                                height="20px" viewBox="0 0 32 32"><path fill="currentColor"                                    d="M27 0h-24c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h24c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM26 28h-22v-24h22v24zM8 18h14v2h-14zM8 22h14v2h-14zM10 9c0-1.657 1.343-3 3-3s3 1.343 3 3c0 1.657-1.343 3-3 3s-3-1.343-3-3zM15 12h-4c-1.65 0-3 0.9-3 2v2h10v-2c0-1.1-1.35-2-3-2z"></path></svg></i></a></div></div></main><footer><script src="https://pv.sohu.com/cityjson?ie=utf-8"></script><script src="./js/sohuapi.js"></script></footer></div><script src="./js/index.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>HI，KZero</title>
+    <meta http-equiv="x-dns-prefetch-control " content="on">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/index.css">
+    <base target="_blank">
+</head>
+
+<body>
+    <div class="card">
+        <main>
+            <div class="left">
+                <div class="author"><img class="avatar" src="./img/avatar.jpg">
+                    <h1>CodeKZero</h1>
+                    <p class="subhead">Geek</p>
+                </div>
+            </div>
+            <div class="right">
+                <p>0000 00<br>011 0 0100 1010 111 11 0 100001 1 000<br>11 1011 100001 000 00 1 0</p>
+                <div class="link">
+                    <a href="https://blog.kzero.vip/" class="icon" data-title="Blog">
+                        <i>
+                            <svg  width="20px" height="20px" viewBox="0 0 512 512">
+                                <path fill="currentColor" d="M368 96a16 16 0 01-16-16V0H88a24 24 0 00-24 24v168h83a32 32 0 0122 9l14 14a32 32 0 0022 9h102a32 32 0 0022-9l14-14a32 32 0 0122-9h83V96z" opacity=".4" />
+                                <path fill="currentColor" d="M368 96h80v-5a18 18 0 00-5-12L369 5a18 18 0 00-12-5h-5v80a16 16 0 0016 16zm112 96H365a32 32 0 00-22 9l-14 14a32 32 0 01-22 9H205a32 32 0 01-22-9l-14-14a32 32 0 00-22-9H32a32 32 0 00-32 32v32a32 32 0 0032 32v160a64 64 0 0064 64h320a64 64 0 0064-64V288a32 32 0 0032-32v-32a32 32 0 00-32-32zM336 296a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-24 56h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8zm-40-56a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8h-16a8 8 0 01-8-8zm-40 24H88a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm32 64h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8v16a8 8 0 01-8 8zm232 56a8 8 0 01-8 8H152a8 8 0 01-8-8v-16a8 8 0 018-8h208a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8zm32-64a8 8 0 01-8 8h-16a8 8 0 01-8-8v-16a8 8 0 018-8h16a8 8 0 018 8z" />
+                            </svg>
+                        </i>
+                    </a>
+                    <a class="icon" data-title="GitHub" href="https://github.com/zoiiiiii">
+                        <i>
+                            <svg aria-hidden="true" width="21px" height="21px" viewBox="0 0 496 512">
+                                <path fill="currentColor" d="M166 397c0 2-2 4-5 4-4 0-6-1-6-4 0-2 2-3 5-3 3-1 6 1 6 3zm-31-4c-1 2 1 4 4 5s6 0 6-2-1-5-4-5c-3-1-5 0-6 2zm44-2c-3 1-5 3-5 5 1 2 3 3 6 3 3-1 5-3 5-5s-3-3-6-3zM245 8A240 240 0 000 252a251 251 0 00170 239c12 2 17-5 17-12v-61s-70 15-85-30c0 0-12-29-28-37 0 0-23-15 2-15 0 0 24 2 38 26 22 38 59 27 73 21 2-16 9-28 16-34-56-6-112-14-112-111 0-27 7-41 23-59a95 95 0 013-67c21-7 69 27 69 27a235 235 0 01126 0s48-34 69-27a94 94 0 012 67c16 18 26 32 26 59 0 97-59 105-115 111 9 8 17 23 17 46v84c0 6 5 14 17 12a248 248 0 00168-239C496 113 384 8 245 8zM97 353c-1 1-1 3 1 5 1 2 4 2 5 1s1-3-1-5c-1-2-4-2-5-1zm-11-8l3 4c1 1 3 0 4-1s0-3-2-4-4 0-5 1zm33 35c-2 2-1 5 1 7s5 2 7 1c1-2 0-5-2-7s-5-2-6-1zm-12-14v6c2 2 5 3 6 2 2-1 2-4 0-6-1-3-4-4-6-2z" />
+                            </svg>
+                        </i>
+                    </a>
+                    <a class="icon" data-title="Email" href="mailto:i@kzero.vip">
+                        <i>
+                        <svg aria-hidden="true" width="20px" height="20px" viewBox="0 0 640 640">
+                                <path fill="currentColor" d="M576 64c35.346 0 64 28.654 64 64v0 384c0 35.346-28.654 64-64 64v0h-512c-35.346 0-64-28.654-64-64v0-384c0-35.2 28.8-64 64-64h512zM436.16 355.2l203.84 156.8v-64l-163.84-124.8 163.84-131.2v-64l-320 256-320-256v64l163.84 131.2-163.84 124.8v64l203.84-156.8 116.16 92.8 116.16-92.8z"></path>
+                            </svg>
+                        </i>
+                    </a>
+                    <a href="https://nav.kzero.vip/" class="icon" data-title="Nav">
+                        <i>
+                            <svg aria-hidden="true" width="22px" height="22px"  viewBox="0 0 576 512">
+                                <path fill="currentColor" d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"></path>
+                            </svg>
+                        </i>
+                    </a>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
+            <script src="./js/sohuapi.js"></script>
+        </footer>
+    </div>
+    <script src="./js/index.js"></script>
+</body>
+
+</html>
