--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="cont">
                 <p><br>编程 / 户外 / 音乐 / 摄影<br>探索发现有趣的事物</p>
                 <div class="link">
-                    <a href="https://blog.kzero.vip/" class="icon" data-title="Blog">
+                    <a href="https://blog.zoiii.cn/" class="icon" data-title="Blog">
                         <i>
                             <svg width="20px" height="20px" viewBox="0 0 512 512">
                                 <path fill="currentColor"
@@ -51,7 +51,7 @@
                             </svg>
                         </i>
                     </a>
-                    <a href="https://nav.kzero.vip/" class="icon" data-title="Nav">
+                    <a href="https://nav.zoiii.cn/" class="icon" data-title="Nav">
                         <i>
                             <svg aria-hidden="true" width="22px" height="22px" viewBox="0 0 576 512">
                                 <path fill="currentColor"
