--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                             </svg>
                         </i>
                     </a>
+                    <a class="icon" data-title="Steam" href="https://steamcommunity.com/profiles/76561198863966966">
+                        <i>
+                            <svg aria-hidden="true" width="20px" height="20px" viewBox="0 0 496 512">
+                                <path fill="currentColor"
+                                    d="M496 256c0 137-111.2 248-248.4 248-113.8 0-209.6-76.3-239-180.4l95.2 39.3c6.4 32.1 34.9 56.4 68.9 56.4 39.2 0 71.9-32.4 70.2-73.5l84.5-60.2c52.1 1.3 95.8-40.9 95.8-93.5 0-51.6-42-93.5-93.7-93.5s-93.7 42-93.7 93.5v1.2L176.6 279c-15.5-.9-30.7 3.4-43.5 12.1L0 236.1C10.2 108.4 117.1 8 247.6 8 384.8 8 496 119 496 256zM155.7 384.3l-30.5-12.6a52.8 52.8 0 0 0 27.2 25.8c26.9 11.2 57.8-1.6 69-28.4 5.4-13 5.5-27.3 .1-40.3-5.4-13-15.5-23.2-28.5-28.6-12.9-5.4-26.7-5.2-38.9-.6l31.5 13c19.8 8.2 29.2 30.9 20.9 50.7-8.3 19.9-31 29.2-50.8 21zm173.8-129.9c-34.4 0-62.4-28-62.4-62.3s28-62.3 62.4-62.3 62.4 28 62.4 62.3-27.9 62.3-62.4 62.3zm.1-15.6c25.9 0 46.9-21 46.9-46.8 0-25.9-21-46.8-46.9-46.8s-46.9 21-46.9 46.8c.1 25.8 21.1 46.8 46.9 46.8z" />
+                            </svg>
+                        </i>
+                    </a>
                     <a class="icon" data-title="Email" href="mailto:izoii@qq.com">
                         <i>
                             <svg aria-hidden="true" width="20px" height="20px" viewBox="0 0 640 640">
@@ -51,14 +59,14 @@
                             </svg>
                         </i>
                     </a>
-                    <a href="https://nav.zoiii.cn/" class="icon" data-title="Nav">
+                    <!-- <a href="https://nav.zoiii.cn/" class="icon" data-title="Nav">
                         <i>
                             <svg aria-hidden="true" width="22px" height="22px" viewBox="0 0 576 512">
                                 <path fill="currentColor"
                                     d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z" />
                             </svg>
                         </i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </main>
@@ -69,4 +77,3 @@
     </div>
     <script src="./js/index.js"></script>
 </body>
-
