--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="cont">
-                <p><br>编程 / 户外 / 音乐 / 摄影<br>探索发现有趣的事物</p>
+                <p><br>编程 / 徒步 / 音乐 / 摄影<br>探索发现有趣的事物</p>
                 <div class="link">
                     <a href="https://blog.zoiii.cn/" class="icon" data-title="Blog">
                         <i>
