--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <div class="link">
                     <a href="https://blog.zoiii.cn/" class="icon" data-title="Blog">
                         <i>
-                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 512 512"  width=20px height=20px>
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 512 512" width=20px
+                                height=20px>
                                 <path fill="currentColor"
                                     d="M368 96a16 16 0 01-16-16V0H88a24 24 0 00-24 24v168h83a32 32 0 0122 9l14 14a32 32 0 0022 9h102a32 32 0 0022-9l14-14a32 32 0 0122-9h83V96z"
                                     opacity=".4" />
@@ -39,7 +40,8 @@
                     </a>
                     <a class="icon" data-title="GitHub" href="https://github.com/zoiiiiii">
                         <i>
-                            <svg  xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 496 512"  width=21px height=21px>
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 496 512" width=21px
+                                height=21px>
                                 <path fill="currentColor"
                                     d="M166 397c0 2-2 4-5 4-4 0-6-1-6-4 0-2 2-3 5-3 3-1 6 1 6 3zm-31-4c-1 2 1 4 4 5s6 0 6-2-1-5-4-5c-3-1-5 0-6 2zm44-2c-3 1-5 3-5 5 1 2 3 3 6 3 3-1 5-3 5-5s-3-3-6-3zM245 8A240 240 0 000 252a251 251 0 00170 239c12 2 17-5 17-12v-61s-70 15-85-30c0 0-12-29-28-37 0 0-23-15 2-15 0 0 24 2 38 26 22 38 59 27 73 21 2-16 9-28 16-34-56-6-112-14-112-111 0-27 7-41 23-59a95 95 0 013-67c21-7 69 27 69 27a235 235 0 01126 0s48-34 69-27a94 94 0 012 67c16 18 26 32 26 59 0 97-59 105-115 111 9 8 17 23 17 46v84c0 6 5 14 17 12a248 248 0 00168-239C496 113 384 8 245 8zM97 353c-1 1-1 3 1 5 1 2 4 2 5 1s1-3-1-5c-1-2-4-2-5-1zm-11-8l3 4c1 1 3 0 4-1s0-3-2-4-4 0-5 1zm33 35c-2 2-1 5 1 7s5 2 7 1c1-2 0-5-2-7s-5-2-6-1zm-12-14v6c2 2 5 3 6 2 2-1 2-4 0-6-1-3-4-4-6-2z" />
                             </svg>
@@ -47,7 +49,8 @@
                     </a>
                     <a class="icon" data-title="Steam" href="https://steamcommunity.com/profiles/76561198863966966">
                         <i>
-                            <svg  xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 496 512" width=20px height=20px>
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 496 512" width=20px
+                                height=20px>
                                 <path fill="currentColor"
                                     d="M496 256c0 137-111.2 248-248.4 248-113.8 0-209.6-76.3-239-180.4l95.2 39.3c6.4 32.1 34.9 56.4 68.9 56.4 39.2 0 71.9-32.4 70.2-73.5l84.5-60.2c52.1 1.3 95.8-40.9 95.8-93.5 0-51.6-42-93.5-93.7-93.5s-93.7 42-93.7 93.5v1.2L176.6 279c-15.5-.9-30.7 3.4-43.5 12.1L0 236.1C10.2 108.4 117.1 8 247.6 8 384.8 8 496 119 496 256zM155.7 384.3l-30.5-12.6a52.8 52.8 0 0 0 27.2 25.8c26.9 11.2 57.8-1.6 69-28.4 5.4-13 5.5-27.3 .1-40.3-5.4-13-15.5-23.2-28.5-28.6-12.9-5.4-26.7-5.2-38.9-.6l31.5 13c19.8 8.2 29.2 30.9 20.9 50.7-8.3 19.9-31 29.2-50.8 21zm173.8-129.9c-34.4 0-62.4-28-62.4-62.3s28-62.3 62.4-62.3 62.4 28 62.4 62.3-27.9 62.3-62.4 62.3zm.1-15.6c25.9 0 46.9-21 46.9-46.8 0-25.9-21-46.8-46.9-46.8s-46.9 21-46.9 46.8c.1 25.8 21.1 46.8 46.9 46.8z" />
                             </svg>
@@ -55,7 +58,8 @@
                     </a>
                     <a class="icon" data-title="Email" href="mailto:izoii@qq.com">
                         <i>
-                            <svg  xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 640 640"width=20px height=20px>
+                            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 640 640" width=20px
+                                height=20px>
                                 <path fill="currentColor"
                                     d="M576 64c35.346 0 64 28.654 64 64v0 384c0 35.346-28.654 64-64 64v0h-512c-35.346 0-64-28.654-64-64v0-384c0-35.2 28.8-64 64-64h512zM436.16 355.2l203.84 156.8v-64l-163.84-124.8 163.84-131.2v-64l-320 256-320-256v64l163.84 131.2-163.84 124.8v64l203.84-156.8 116.16 92.8 116.16-92.8z" />
                             </svg>
@@ -73,11 +77,12 @@
             </div>
         </main>
         <footer>
-            <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
-            <script src="./js/sohuapi.js"></script>
+            <span id="visitor-ip"></span>
+            <script src="./js/ip.js"> </script>
+            <script src="./js/os-browser.js"></script>
         </footer>
     </div>
-    <script src="./js/index.js"></script>
+    <script src="./js/fadeIn.js"></script>
 </body>
 
 </html>
