--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/index.css">
-		<script src="http://pv.sohu.com/cityjson"></script>
+    <meta name="referrer" content="no-referrer" />
     <base target="_blank">
     <!-- SEO 元标签 -->
     <meta name="description" content="zoiii个人主页，专注于编程、徒步、音乐和摄影，探索发现有趣的事物。">
@@ -78,7 +78,15 @@
             </div>
         </main>
         <footer>
-            <!-- <span id="visitor-ip"></span> -->
+
+            <span id="visitorIP"></span>
+            <script>
+                function smldhz(res) {
+                    document.getElementById('visitorIP').textContent = res.ip;
+                    console.log(res.ip);
+                }
+            </script>
+            <script src="https://whois.pconline.com.cn/ipJson.jsp?callback=smldhz"></script>
             <script src="./js/os-browser.js"></script>
         </footer>
     </div>
