--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/style.css">
     <meta name="referrer" content="no-referrer" />
     <base target="_blank">
     <!-- SEO 元标签 -->
-    <meta name="description" content="zoiii个人主页，专注于编程、徒步、音乐和摄影，探索发现有趣的事物。">
+    <meta name="description" content="KZero个人主页，专注于编程、徒步、音乐和摄影，探索发现有趣的事物。">
+    <meta name="baidu-site-verification" content="codeva-GFkQIr0i6R" />
 </head>
 
 <body>
