--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             </svg>
                         </i>
                     </a>
-                    <a class="icon" data-title="Email" href="mailto:izoii@qq.com">
+                    <a class="icon" data-title="Email" href="mailto:i@zoiii.cn">
                         <i>
                             <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 640 640" width=20px
                                 height=20px>
