--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="card">
         <main>
             <div class="info">
-                <div class="author"><img class="avatar" src="./img/avatar.jpg">
+                <div class="author"><img class="avatar" src="./img/out.png">
                     <h1>CodeKZero</h1>
                     <p class="subhead">Noob</p>
                 </div>
