--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-dns-prefetch-control " content="on">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="referrer" content="no-referrer" />
     <base target="_blank">
@@ -20,13 +20,13 @@
     <div class="card">
         <main>
             <div class="info">
-                <div class="author"><img class="avatar" src="./img/out.jpg">
+                <div class="author"><img class="avatar" src="./img/avatar.jpg">
                     <h1>CodeKZero</h1>
                     <p class="subhead">Noob</p>
                 </div>
             </div>
             <div class="cont">
-                <p><br>编程 / 徒步 / 音乐 / 摄影<br>探索发现有趣的事物</p>
+                <p><br>编程 / 徒步 / 摄影 / 音乐<br>探索发现有趣的事物</p>
                 <div class="link">
                     <a href="https://blog.zoiii.cn/" class="icon" data-title="Blog">
                         <i>
